--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
     <script src="tooltip.js"></script>
   </head>
   <body>
-    <uc-tooltip></uc-tooltip>
+    <p><uc-tooltip>Web Components</uc-tooltip> are awesome!</p>
   </body>
 </html>
