--- a/index.html
+++ b/index.html
@@ -8,6 +8,16 @@
     <script src="tooltip.js"></script>
   </head>
   <body>
-    <p><uc-tooltip>Web Components</uc-tooltip> are awesome!</p>
+    <p>
+      <uc-tooltip text="Web Components is a set of standards"
+        >Web Components</uc-tooltip
+      >
+      are awesome!
+    </p>
+
+    <p>
+      <uc-tooltip>Web Components</uc-tooltip>
+      are awesome!
+    </p>
   </body>
 </html>
