Add basic slot to template

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     <template id="tooltip-template">
-      <span> (?)</span>
+      <slot>Some defaults</slot><span> (?)</span>
     </template>
     <p>
       <uc-tooltip text="Web Components is a set of standards"
@@ -18,9 +18,6 @@
       are awesome!
     </p>
 
-    <p>
-      <uc-tooltip>Web Components</uc-tooltip>
-      are awesome!
-    </p>
+    <uc-tooltip></uc-tooltip>
   </body>
 </html>
