--- a/index.html
+++ b/index.html
@@ -5,12 +5,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Web Components</title>
+    <style>
+      div {
+        border: 2px solid orange;
+        margin: 20px 0;
+      }
+    </style>
     <script src="tooltip.js"></script>
+    <script src="confirm-link.js"></script>
   </head>
   <body>
-    <template id="tooltip-template">
-      <slot>Some defaults</slot><span> (?)</span>
-    </template>
     <p>
       <uc-tooltip text="Web Components is a set of standards"
         >Web Components</uc-tooltip
@@ -19,5 +23,11 @@
     </p>
 
     <uc-tooltip></uc-tooltip>
+
+    <div>
+      This doesn't get the web componnet styles!
+    </div>
+
+    <a is="uc-confirm-link" href="https:www.google.com" title="">Google</a>
   </body>
 </html>
