Add basic inline style to the lite dom

--- a/index.html
+++ b/index.html
@@ -6,9 +6,19 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Web Components</title>
     <script src="tooltip2.js"></script>
+    <style>
+      div {
+        border: 2px solid orange;
+      }
+    </style>
   </head>
   <body>
-    <p><uc-tooltip>Web Components</uc-tooltip> are awesome!</p>
+    <p>
+      <uc-tooltip text="web Components is a set of standards"
+        >Web Components</uc-tooltip
+      >
+      are awesome!
+    </p>
     <uc-tooltip>Here we go!</uc-tooltip>
   </body>
 </html>
