--- a/index.html
+++ b/index.html
@@ -13,12 +13,14 @@
     </style>
   </head>
   <body>
+    <!-- <template id="tooltip-template">
+    </template> -->
     <p>
       <uc-tooltip text="web Components is a set of standards"
         >Web Components</uc-tooltip
       >
       are awesome!
     </p>
-    <uc-tooltip>Here we go!</uc-tooltip>
+    <uc-tooltip></uc-tooltip>
   </body>
 </html>
